Avoid the header and search bar be covered by WordPress's admin bar

--- a/frontend/scss/_page-search.scss
+++ b/frontend/scss/_page-search.scss
@@ -10,7 +10,7 @@ body.search,
   }
 
   .live-search {
-    background: $color-lightblue;
+    background: white;
     min-height: 200px;
 
     form {
@@ -155,6 +155,14 @@ body.search,
 
   @include greaterThan('sm') {
     top: 50px; // see _header.scss
+    .admin-bar & {
+      top: 50 + 32px;
+    }
+  }
+  @media only screen and (max-width: 782px) {
+    .admin-bar & {
+      top: 96 + 46px;
+    }
   }
 
   .live-search {
