--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1467,7 +1467,11 @@ a.card-mini { display: block; text-decoration: none !important; border-bottom: n
 
 @media only screen and (max-width: 1023px) { .stepper { margin-top: 5px; } }
 
-header { position: relative; height: 50px; -webkit-box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.4); box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.4); background-color: #66cc00; color: white; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; z-index: 4; }
+header { position: relative; height: 50px; background-color: #66cc00; color: white; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; z-index: 4; }
+
+.admin-bar header { top: 32px; }
+
+@media only screen and (max-width: 782px) { .admin-bar header { top: 46px; } }
 
 @media only screen and (min-width: 1024px) { header { position: fixed; left: 0; right: 0; z-index: 99; } }
 
@@ -3098,7 +3102,7 @@ body:not(.page-template-project) .section-project-phases { min-height: 250px !im
 
 div.section-post-donation-launcher__border-bottom { -webkit-box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.4); box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.4); height: 3px; }
 
-.section-mc-subscription { -webkit-box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.4); box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.4); background: white !important; }
+.section-mc-subscription { background: white !important; margin: 35px 0 35px; }
 
 .section-mc-subscription .hide { display: none !important; }
 
@@ -3108,7 +3112,7 @@ div.section-post-donation-launcher__border-bottom { -webkit-box-shadow: 0 0 6px 
 
 .section-mc-subscription .ct-container.thankyou { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; }
 
-@media only screen and (min-width: 1024px) { .section-mc-subscription { padding: 35px 0; } }
+@media only screen and (min-width: 1024px) { .section-mc-subscription { margin: 60px 0; } }
 
 .section-mc-subscription .content { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; }
 
@@ -3116,7 +3120,7 @@ div.section-post-donation-launcher__border-bottom { -webkit-box-shadow: 0 0 6px 
 
 @media only screen and (min-width: 1024px) { .section-mc-subscription .content--title h2 { font-size: 28px; } }
 
-.section-mc-subscription .content--title p { margin-top: 3em; margin-bottom: 0; font-weight: 400; font-size: 16px; border-left: 4px solid #66cc00; padding-left: 0.75em; }
+.section-mc-subscription .content--title p { margin-top: 0; margin-bottom: 0; font-weight: 400; font-size: 16px; border-left: 4px solid #66cc00; padding-left: 0.75em; }
 
 @media only screen and (min-width: 1024px) { .section-mc-subscription .form-container { max-width: 610px; } }
 
@@ -3654,7 +3658,7 @@ body.search .live-search, body.search .advanced-search, .dynamic-search .live-se
 
 @media only screen and (min-width: 1024px) { body.search .live-search, body.search .advanced-search, .dynamic-search .live-search, .dynamic-search .advanced-search { padding: 40px 0; } }
 
-body.search .live-search, .dynamic-search .live-search { background: #e6f5f5; min-height: 200px; }
+body.search .live-search, .dynamic-search .live-search { background: white; min-height: 200px; }
 
 body.search .live-search form .lds-spinner, .dynamic-search .live-search form .lds-spinner { display: block; position: absolute; -webkit-transform: scale(0.5); -ms-transform: scale(0.5); transform: scale(0.5); -webkit-transform-origin: left top; -ms-transform-origin: left top; transform-origin: left top; opacity: 0; visibility: hidden; -webkit-transition: opacity 140ms linear, visibility 0s linear 140ms; transition: opacity 140ms linear, visibility 0s linear 140ms; }
 
@@ -3703,7 +3707,10 @@ body.search .has-load-more, .dynamic-search .has-load-more { text-align: center;
 
 .dynamic-search.is-visible { visibility: visible; opacity: 1; -webkit-transition: opacity 200ms linear, visibility 0ms linear 0ms; transition: opacity 200ms linear, visibility 0ms linear 0ms; }
 
-@media only screen and (min-width: 1024px) { .dynamic-search { top: 50px; } }
+@media only screen and (min-width: 1024px) { .dynamic-search { top: 50px; }
+  .admin-bar .dynamic-search { top: 82px; } }
+
+@media only screen and (max-width: 782px) { .admin-bar .dynamic-search { top: 142px; } }
 
 .dynamic-search .live-search { max-height: 100%; overflow-y: auto; -webkit-transform: translateY(-20px); -ms-transform: translateY(-20px); transform: translateY(-20px); -webkit-transition: -webkit-transform 140ms ease-in-out; transition: -webkit-transform 140ms ease-in-out; transition: transform 140ms ease-in-out; transition: transform 140ms ease-in-out, -webkit-transform 140ms ease-in-out; }
 
